plugins {
    id 'java-library'
    id 'net.thebugmc.gradle.sonatype-central-portal-publisher' version '1.2.4'
}

description = "Cross-platform code highlight engine"
group = 'com.qiplat'
version = '1.3.1'

java {
    sourceCompatibility = JavaVersion.VERSION_22
    targetCompatibility = JavaVersion.VERSION_22
}

def repoRoot = rootProject.projectDir.toPath().resolve('../..').normalize().toFile()
def generatedNativeResourcesDir = layout.buildDirectory.dir('generated/resources/main')

sourceSets {
    main {
        resources.srcDir(generatedNativeResourcesDir)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.register('syncNativeResources', Sync) {
    into(generatedNativeResourcesDir)

    from(new File(repoRoot, 'prebuilt/windows/x64')) {
        include 'sweetline.dll'
        into 'native/windows-x86_64'
    }
    from(new File(repoRoot, 'prebuilt/linux/x86_64')) {
        include 'libsweetline.so'
        into 'native/linux-x86_64'
    }
    from(new File(repoRoot, 'prebuilt/linux/aarch64')) {
        include 'libsweetline.so'
        into 'native/linux-aarch64'
    }
    from(new File(repoRoot, 'prebuilt/macos/x86_64')) {
        include 'libsweetline.dylib'
        into 'native/macos-x86_64'
    }
    from(new File(repoRoot, 'prebuilt/macos/arm64')) {
        include 'libsweetline.dylib'
        into 'native/macos-aarch64'
    }
}

tasks.named('processResources') {
    dependsOn(tasks.named('syncNativeResources'))
}

tasks.named('sourcesJar') {
    dependsOn(tasks.named('syncNativeResources'))
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

javadoc {
    failOnError false
    options {
        locale("zh_CN")
        encoding("utf-8")
        links("http://docs.oracle.com/javase/7/docs/api")
    }
}

def mavenCentralUsername = providers.gradleProperty("mavenCentralUsername")
def mavenCentralPassword = providers.gradleProperty("mavenCentralPassword")

signing {
    useGpgCmd()
}

centralPortal {
    username = mavenCentralUsername.orNull
    password = mavenCentralPassword.orNull
    name = "sweetline-ffm"

    pom {
        url = "https://github.com/FinalScave/SweetLine"
        licenses {
            license {
                name = "MIT License"
                url = "https://opensource.org/license/mit"
            }
        }
        developers {
            developer {
                name = "Scave"
                email = "iscave@163.com"
                organization = "Mobile IPE"
                organizationUrl = "https://github.com/mobile-ipe"
            }
        }
        scm {
            connection = "scm:git:https://github.com/FinalScave/SweetLine.git"
            developerConnection = "scm:git:https://github.com/FinalScave/SweetLine"
            url = "https://github.com/FinalScave/SweetLine"
        }
    }
}
